--- a/package.json
+++ b/package.json
@@ -16,6 +16,7 @@
     "gatsby-plugin-manifest": "^4.18.0",
     "gatsby-plugin-offline": "^5.18.0",
     "gatsby-plugin-react-helmet": "^5.18.0",
+    "gatsby-plugin-scroll-reveal": "^0.0.7",
     "gatsby-plugin-sharp": "^4.18.0",
     "gatsby-remark-copy-linked-files": "^5.18.0",
     "gatsby-remark-images": "^6.18.0",
@@ -26,8 +27,8 @@
     "gatsby-transformer-remark": "^5.18.0",
     "gatsby-transformer-sharp": "^4.18.0",
     "prismjs": "^1.28.0",
-    "react": "^18.1.0",
-    "react-dom": "^18.1.0",
+    "react": "^16.8.0",
+    "react-dom": "^16.8.0",
     "react-helmet": "^6.1.0",
     "typeface-merriweather": "0.0.72",
     "typeface-montserrat": "0.0.75"
